corrected padding on tablet portrait to reduce words per line.

--- a/src/components/Episode/styles.scss
+++ b/src/components/Episode/styles.scss
@@ -97,7 +97,7 @@ $fade-color: rgb(237, 20, 61);
 }
 
 //Tablet landscape
-@media (min-width: 768px) {
+@media (min-width: 768px) and (orientation: landscape) {
 	.wrapper {
 		padding-top: 5%;
 	}
